syntax = "proto3";

package todoPackage;

service Todo {
	rpc createTodo(TodoItem) returns (TodoItem);
	rpc readTodos(voidNoParam) returns (TodoItems);
	rpc readTodosStream(voidNoParam) returns (stream TodoItem);
}

message TodoItem {
	int32 id = 1;
	string text = 2;
}

message voidNoParam {}

message TodoItems {
	repeated TodoItem items = 1;
}

